# hyperlane_starknet

./: .gitignore  LICENSE  README.md  Scarb.toml
.github/: CODEOWNERS
.github/workflows/: build.yml  label-prs.yml  release.yml  rust.yml  test.yml  token-ext.yml
.snfoundry_cache/: .prev_tests_failed
cairo/: .tool-versions  Scarb.toml
cairo/crates/contracts/: Scarb.toml
cairo/crates/contracts/src/: interfaces.cairo  lib.cairo  mailbox.cairo  serde_bytes.cairo
cairo/crates/contracts/tests/: lib.cairo  setup.cairo  test_mailbox.cairo  test_validator_announce.cairo
cairo/crates/mocks/: Scarb.toml
cairo/crates/mocks/src/: enumerable_map_holder.cairo  erc4626_component.cairo  erc4626_mock.cairo  erc4626_yield_sharing_mock.cairo  fee_hook.cairo  fee_token.cairo  hook.cairo  ism.cairo  lib.cairo  message_recipient.cairo  mock_account.cairo  mock_hyp_erc721_uri_storage.cairo  mock_mailbox.cairo  mock_paradex_dex.cairo  mock_rate_limited.cairo  mock_validator_announce.cairo  test_erc20.cairo  test_erc721.cairo  test_interchain_gas_payment.cairo  test_ism.cairo  test_post_dispatch_hook.cairo  xerc20_lockbox_test.cairo  xerc20_test.cairo
cairo/crates/token/: Scarb.toml
cairo/crates/token/src/: hyp_erc20.cairo  hyp_erc20_collateral.cairo  hyp_erc721.cairo  hyp_erc721_collateral.cairo  hyp_native.cairo  lib.cairo
cairo/crates/token/tests/: lib.cairo
cairo/src/: interfaces.cairo  lib.cairo
cairo/src/contracts/: mailbox.cairo
cairo/src/contracts/client/: gas_router_component.cairo  mailboxclient.cairo  mailboxclient_component.cairo  router_component.cairo
cairo/src/contracts/hooks/: merkle_tree_hook.cairo  protocol_fee.cairo
cairo/src/contracts/isms/: noop_ism.cairo  pausable_ism.cairo  trusted_relayer_ism.cairo
cairo/src/contracts/libs/: checkpoint_lib.cairo  enumerable_map.cairo  math.cairo
cairo/src/contracts/mocks/: enumerable_map_holder.cairo  erc4626_component.cairo  erc4626_mock.cairo  erc4626_yield_sharing_mock.cairo  hook.cairo  message_recipient.cairo  mock_hyp_erc721_uri_storage.cairo  mock_mailbox.cairo  mock_validator_announce.cairo  test_erc20.cairo  test_erc721.cairo  test_interchain_gas_payment.cairo  test_ism.cairo  test_post_dispatch_hook.cairo  xerc20_lockbox_test.cairo
cairo/src/contracts/token/: hyp_erc20.cairo  hyp_erc20_collateral.cairo  hyp_erc721.cairo  hyp_erc721_collateral.cairo  hyp_native.cairo
cairo/src/tests/: setup.cairo  test_mailbox.cairo  test_validator_announce.cairo
cairo/tests/: lib.cairo  test_mailbox.cairo  test_validator_announce.cairo
cairo/tests/hooks/: test_merkle_tree_hook.cairo  test_protocol_fee.cairo
cairo/tests/isms/: test_aggregation.cairo  test_default_ism.cairo  test_merkleroot_multisig.cairo  test_messageid_multisig.cairo
cairo/tests/routing/: test_default_fallback_routing_ism.cairo  test_domain_routing_ism.cairo
contracts/: README.md  Scarb.toml  package-lock.json
contracts/src/: interfaces.cairo  lib.cairo  test.py
contracts/src/contracts/: mailbox.cairo
contracts/src/tests/: setup.cairo  test_hook.cairo  test_mailbox.cairo  test_multisig.cairo  test_validator_announce.cairo
contracts/src/utils/: keccak256.cairo  store_arrays.cairo
crates/hyperlane_interfaces/: Scarb.toml
crates/hyperlane_interfaces/src/: lib.cairo
rust/: .gitignore  Cargo.toml  build.rs  rust-toolchain.toml
rust/abis/: FastHypERC20.json  FastHypERC20Collateral.json  Mailbox.json  TestMerkleTreeHook.json  TestMultisigIsm.json  TestRecipient.json
rust/hyperlane-starknet-rs/: Cargo.toml
rust/hyperlane-starknet-rs/contracts/: mod.rs
rust/tests/: constants.rs  event.rs  mailbox.rs  validator.rs
rust/tests/contracts/: mod.rs
rust/tests/contracts/eth/: deploy.rs  types.rs
rust/tests/contracts/eth/bind/: mod.rs
rust/tests/contracts/strk/: deploy.rs  hook.rs  ism.rs  mod.rs  setup.rs  types.rs  utils.rs
rust/tests/contracts/strk/bind/: mod.rs
scripts/: .env.example  bun.lockb  contract_config.json  deploy.ts  deployments.ts  package-lock.json  package.json  tsconfig.json  update-hooks.ts  utils.ts
scripts/configs/: pragma_devnet.json  pragma_sepolia.json  starknet_sepolia.json
scripts/deployments/PRAGMA_DEVNET/: deployments.json
scripts/deployments/STARKNET_SEPOLIA/: deployments.json
scripts/deployments/devnet/: deployments.json
src/: interfaces.cairo  lib.cairo
src/contracts/: mailbox.cairo
src/contracts/client/: mailboxclient.cairo  router.cairo
src/contracts/libs/: checkpoint_lib.cairo  message.cairo
src/contracts/mocks/: ism.cairo
src/tests/: setup.cairo  test_mailbox.cairo  test_multisig.cairo
src/utils/: keccak256.cairo  store_arrays.cairo
xerc20/: .gitignore  .tool-versions  Scarb.toml  snfoundry.toml
xerc20/scripts/: .env.example  declare.sh  deploy_factory.sh
xerc20/src/: lib.cairo
xerc20/src/factory/: contract.cairo  interface.cairo
xerc20/src/lockbox/: component.cairo  contract.cairo  interface.cairo
xerc20/src/mocks/: mock_account.cairo  mock_erc20_token.cairo  mock_xerc20_token.cairo
xerc20/src/utils/: enumerable_address_set.cairo
xerc20/src/xerc20/: component.cairo  contract.cairo  interface.cairo
xerc20/tests/: common.cairo  lib.cairo
xerc20/tests/e2e/: common.cairo  xerc20_factory_test.cairo  xerc20_lockbox_test.cairo  xerc20_test.cairo
xerc20/tests/unit/: xerc20_factory_test.cairo  xerc20_lockbox_test.cairo  xerc20_test.cairo
(+180 files in other folders)
