[package]
name = "hyperlane-starknet"
version = "0.0.2"
authors = [
    "byeongsu-hong <hong@byeongsu.dev>",
    "Eric <hashableric@gmail.com>",
    "Steve <steve8060914@gmail.com>",
]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/astraly-labs/hyperlane-starknet"
homepage = "https://www.hyperlane.xyz/"
documentation = "https://docs.hyperlane.xyz/"
keywords = ["hyperlane", "starknet", "cairo"]

[profile.test]
opt-level = 2
overflow-checks = true

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = true
opt-level = 3
overflow-checks = true
panic = "abort"
rpath = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
starknet = "0.10.0"

[dev_dependencies]
starknet = "0.10.0"
cainome = { git = "https://github.com/cartridge-gg/cainome", tag = "v0.2.9", features = [
    "abigen-rs",
] }
ethers = "2.0.7"
serde = { version = "1.0.162", default-features = false, features = ["derive"] }
serde_json = "1.0.96"
futures = "0.3.30"

# utilities
thiserror = { version = "1.0.37" }
anyhow = { version = "1.0.71", features = ["backtrace"] }
eyre = { version = "0.6.8" }

# crypto
k256 = { version = "0.13.1", default-features = false, features = ["ecdsa"] }

rstest = "0.18.2"

[build-dependencies]
ethers = "2.0.7"
cainome = { git = "https://github.com/cartridge-gg/cainome", tag = "v0.2.9", features = [
    "abigen-rs",
] }
