[package]
name = "hyperlane-starknet"
version = "0.0.3"
authors = [
    "byeongsu-hong <hong@byeongsu.dev>",
    "Eric <hashableric@gmail.com>",
    "Steve <steve8060914@gmail.com>",
    "Pragma <support@pragma.build>",
]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/astraly-labs/hyperlane-starknet"
homepage = "https://www.hyperlane.xyz/"
documentation = "https://docs.hyperlane.xyz/"
keywords = ["hyperlane", "starknet", "cairo"]

[profile.test]
opt-level = 2
overflow-checks = true

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = true
opt-level = 3
overflow-checks = true
panic = "abort"
rpath = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
starknet = "0.13.0"

[dev-dependencies]
# starknet
cainome = { version = "0.5.1", features = [
    "abigen-rs",
] }
starknet = "0.13.0"
cairo-lang-starknet-classes = "2.10.1"

# eth
ethers = "2.0.7"

# testing
futures = "0.3.30"
rstest = "0.18.2"
serde = { version = "1.0.162", default-features = false, features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1", features = ["full"] }

# utilities
thiserror = { version = "1.0.37" }
anyhow = { version = "1.0.71", features = ["backtrace"] }
eyre = { version = "0.6.8" }
bytes = "1.6.0"

# crypto
sha3 = "0.10.8"
k256 = { version = "0.13.1", default-features = false, features = ["ecdsa"] }


[build-dependencies]
ethers = "2.0.7"
cainome = { version = "0.5.1", features = [
    "abigen-rs",
] }

[dependencies.num-bigint]
version = "0.4.6"
features = []
