[package]
name = "hpl-starknet-rs"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
starknet.workspace = true

[dev_dependencies]
ethers.workspace = true
serde_json.workspace = true
base64.workspace = true
tokio.workspace = true
eyre.workspace = true
k256.workspace = true
sha2.workspace = true
sha3.workspace = true
ripemd.workspace = true
hex-literal.workspace = true

rstest.workspace = true

[build-dependencies]
ethers.workspace = true
